Confirmando cambios después de aplicar stash

--- a/SDGC/nbproject/project.properties
+++ b/SDGC/nbproject/project.properties
@@ -35,20 +35,20 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SDGC
 endorsed.classpath=
 excludes=
-file.reference.itext5-itextpdf-5.5.12.jar=C:\\Program Files\\Java\\itext5-itextpdf-5.5.12.jar
-file.reference.javax.activation-1.2.0.jar=C:\\Program Files\\Java\\javax.activation-1.2.0.jar
-file.reference.javax.mail.jar=C:\\Program Files\\Java\\javax.mail.jar
-file.reference.log4j-1.2.17.jar=C:\\Program Files\\Java\\log4j-1.2.17.jar
-file.reference.mysql-connector-j-8.2.0.jar=C:\\Program Files\\Java\\mysql-connector-j-8.2.0.jar
+file.reference.itext5-itextpdf-5.5.12.jar-1=C:\\Users\\mario\\Desktop\\Todo\\itext5-itextpdf-5.5.12.jar
+file.reference.javax.activation-1.2.0.jar-1=C:\\Users\\mario\\Desktop\\Todo\\javax.activation-1.2.0.jar
+file.reference.javax.mail.jar-1=C:\\Users\\mario\\Desktop\\Todo\\javax.mail.jar
+file.reference.log4j-1.2.17.jar-1=C:\\Users\\mario\\Desktop\\Todo\\log4j-1.2.17.jar
+file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\mario\\Desktop\\Todo\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JavaFX.classpath}:\
-    ${file.reference.itext5-itextpdf-5.5.12.jar}:\
-    ${file.reference.javax.activation-1.2.0.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar}
+    ${libs.FX_21.02.classpath}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-1}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar-1}:\
+    ${file.reference.javax.activation-1.2.0.jar-1}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.log4j-1.2.17.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,7 +61,9 @@ javac.source=17
 javac.target=17
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
@@ -95,7 +97,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=--module-path "C:\\Users\\chris\\Downloads\\javafx-sdk-21.0.2\\lib" --add-modules javafx.controls,javafx.fxml
+run.jvmargs=--module-path "C:\\Users\\mario\\Desktop\\openjfx-21.0.2_windows-x64_bin-sdk\\javafx-sdk-21.0.2\\lib" --add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
@@ -105,4 +107,5 @@ run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
+src.logConfig.dir=logConfig
 test.src.dir=test
